[package]
name = "rjvm"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bitflags = "1.2.1"
human-panic = "1.0.1"
structopt = "0.3.9"
zip = "0.5.4"